PR/50949: David Binderman: Fix misplaced parens.